@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
 
 ALL CHANGES:
 
+  TEZ-1248. Reduce slow-start should special case 1 reducer runs.
 
 Release 0.8.4: 2016-07-08
 
